# py-itunesdb-parser

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  itunes_db_parser.py  itunesdb.txt  pyproject.toml  requirements.txt
